ignore bonus problem for now

--- a/ch_machine_learning.tex
+++ b/ch_machine_learning.tex
@@ -113,18 +113,18 @@ Users that migrated from the endemic region, but only those which are currently 
 Note that at this point we are looking at a reduced instance of our CDRs. That is, we are only considering currently non-endemic users other than the whole sample population. Still, we are taking more than a million users in this dataset.
 
 
-\begin{problem}\label{target5}
-As a \textbf{bonus} problem and for exemplary reasons, we considered tried to detect if a user has a high mobile footprint $M_u$, as defined in \cref{section:def_mobility_diameter}.
+% \begin{problem}\label{target5}
+% As a \textbf{bonus} problem and for exemplary reasons, we considered tried to detect if a user has a high mobile footprint $M_u$, as defined in \cref{section:def_mobility_diameter}.
 
-	\begin{align*}
-		Y_u =
-		\begin{cases}
-			&1 \ \mbox{if} \ {M_u >  1000 } \\
-			&0 \ \mbox{if not}.
-		\end{cases}
-	\end{align*}
+% 	\begin{align*}
+% 		Y_u =
+% 		\begin{cases}
+% 			&1 \ \mbox{if} \ {M_u >  1000 } \\
+% 			&0 \ \mbox{if not}.
+% 		\end{cases}
+% 	\end{align*}
 
-\end{problem}
+% \end{problem}
 
 
 We can see from what was mentioned before that not all problems can be represented by the same dataset.
@@ -132,7 +132,7 @@ The limitations on what is available as our input set $X$ attributes or samples.
 With this in mind, appropriate care must be taken for each case on which attributes are available for the problem being analyzed.
 
 
-With \cref{target1,target2,target3,target4,target5}, we continue onto define and illustrate techniques for supervised classification. Throughout \cref{ch:modelSelection,ch:ensembleMethods,ch:results_conclusion} we will come back to these problems by applying them with the techniques and methods we discuss.
+With \cref{target1,target2,target3,target4}, we continue onto define and illustrate techniques for supervised classification. Throughout \cref{ch:modelSelection,ch:ensembleMethods,ch:results_conclusion} we will come back to these problems by applying them with the techniques and methods we discuss.
 
 
 \section{A working example of a Machine Learning setup}\label{section-example}
