--- a/biblio.bib
+++ b/biblio.bib
@@ -49,6 +49,16 @@
  publisher = {VLDB Endowment},
 }
 
+
+@article{python3.5,
+ author = {Python Software Foundation},
+ title = {Python Language Reference, version 3.5},
+ issue_date = {June 2015},
+ month = jun,
+ year = {2015},
+ url = {http://www.python.org}
+}
+
 @article{scikit-learn,
  title={Scikit-learn: Machine Learning in {P}ython},
  author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
