--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -353,7 +353,7 @@ If we combine \cref{eq:rf-PEconvergence1} and \cref{rf-PEconvergence2}, we will 
 
 \subsection{ Comparison to Decision Trees}\label{subsection:random_forests_comparison_trees}
 
-From what is formulated in \cref{subsection:random_forests_formulation} and in order to compare how this model improves over the Decision Treees,  we ran two experiment setups on a Random Forest learner for the simple task in \cref{target1}, using an $F1$ score. This was a cross validation procedure of 10 folds for each configuration, where each experiment optimized the score on a different hyperparamter.
+From what is formulated in \cref{subsection:random_forests_formulation} and in order to compare how this model improves over the Decision Trees,  we ran two experiment setups on a Random Forest learner for the simple task in \cref{target1}, using an $F1$ score. This was a cross validation procedure of 10 folds for each configuration, where each experiment optimized the score on a different hyperparamter.
 
 For the first one, we test the scores of the forest by varying the maximum depth that the trees can have.
 And on the second one, we try to illustrate the point of \cref{subsection:random_forests_formulation} by considering forests of increasing tree size.
@@ -577,6 +577,7 @@ The grid of hyperparameters used spanned the following items:
 
   \item The tree's max depth
   \item If we pre-weighted the positive and negative classes in the loss function
+  \item The maximum number of trees to grow
   \item
 
 \end{itemize}
@@ -598,7 +599,7 @@ The chained construction of weak learners has its implications in computational 
 
 These properties underline a substantial difference to Random Forests where base learners are built as uncorrelated as possible and where optimization can be performed globally, which allowed a significant parallelization of the algorithm.
 
-\subsection{Ada Boost Formulation}\label{section:gradient_boosting_formulation}
+\subsection{Ada Boost Formulation}\label{subsection:gradient_boosting_formulation}
 
 Let
 \begin{equation}\label{eq:adaBoostTrainingError}
@@ -708,7 +709,71 @@ The use of the exponential loss function $\exp(-Yf(X))$ is also desirable in thi
 A drawback of this loss though, is that it is not robust to outliers or to noisy data. During runtime weights are constantly shifting towards misclassified samples. Then if samples are mislabeled, this will make the algorithm repetitively focus on classifying incorrectly the data.
 
 
- \todo{compare adaboost on same problem as in RF, talk about benefits and drawbacks}
+ \todo{fix subsection of adaboost compared to RF, talk about benefits and drawbacks}
+
+\subsection{ Comparison to Random Forests}\label{subsection:boosting_comparison_forest}
+
+In order to compare this learner to Random Forests, we ran the same setup as in \cref{subsection:random_forests_comparison_trees}
+with two experiments each varying a different hyperparameter.
+The Boosting models were built to classify on task \cref{target1} and were evaluted with an $F1$ score.
+The cross validation procedure set 10 folds for each hyperparameter
+ configuration and both experiments separately tuned on the maximum depth and the number of trees.
+
+For the first one, we test the scores of the forest by varying the maximum depth that the trees can have.
+And on the second one, we try to illustrate the point of \cref{subsection:random_forests_formulation} by considering forests of increasing tree size.
+As a default configuration, we set on 10 the trees' max depth and on 10 the default number of trees.
+
+In both, we set a balanced weighting of positive and negative samples in the loss function. Also, we use the gini index as the impurity measure in the splitting criteria of each tree's node.
+
+Cross validation procedures ran for
+and    seconds respectively and they both excluded attributes of the user's which informed on the user's home state and its current endemic condition at $T_1$.
+
+The experiment's scores outcomes across their hyperparameter values were graphed  in \cref{fig:f1_boosting_validation_curves_depth_num_trees}.
+The couple of cross-validated and training set scores where compared, where, for each hyperparameter value, the $1-F1$ score is shown.
+In this way, having a lower score in the graphic means a better model was reached.
+
+\begin{figure}
+\centering
+\begin{minipage}{.5\textwidth}
+%  \centering
+  \includegraphics[width=.8\linewidth]{figures/gradient-boosting/validation_curve_boosting_depth_series_f1}
+\end{minipage}%
+\begin{minipage}{.5\textwidth}
+%  \centering
+  \includegraphics[width=.8\linewidth]{figures/gradient-boosting/validation_curve_boosting_num_trees_series_f1}
+  \end{minipage}
+\caption{ Side comparison of validation curves for two hyperparameters of the Gradient Boosting learner. The mean CV scores for the $1 - F1$ score is shown, where the nubmer of trees and the depth of the trees hyperparams were tested in seperate experiments.}
+\label{fig:f1_boosting_validation_curves_depth_num_trees}
+\end{figure}
+
+
+Recall how these outcomes compare to \cref{figure:dtree_overfit_problem_2} and \cref{fig:f1_random_forest_validation_curves_depth_num_trees},
+in which a tree's training error always improves as a result of an increase in the tree's depth.
+
+Yet the tree's prediction error at one point suffers and deteriorates.
+
+From what we can see in, the cross validated erros is always decreasing for increasing tree depth.
+A very slight deceleration in the decrease of the cross validated error can be seen for tree depth bigger than 9.
+Yet the scores keeps improving and don't worsen.
+This is different to the Random Forest experiment,
+
+where if we let the tree grow deeper, at one point we only increase the performance of the training error.
+Here, we are possibly improving the generalization error, as indicated by the CV estimation.
+
+ On the other hand, it is interesting to note that there is a very slow decrease in the training and CV scores when the number of trees is increased.
+ This might be explained by the fact that we are setting a default tree depth of 9 leves.
+ A configuration of this type then might be capturing all the needed model complexity to attain
+ Another plausible explanation for this is that, for this task, the forest fastly converges to the generalization error and that adding more trees doesn't certainly improve on the predictions.
+
+
+At their optimal configuration, both setups reached CV score averages of at least , with a maximum of  for the forest
+with trees of  levels.
+The optimal number of estimators for the CV and the training sets were not the same though, were  was the best configuration for the training score whilst  was the best average for the CV set. The relative difference in these best scores was of \%.
+At the same time, the relative difference of the best CV and training scores, for the maximum tree depth experiment was of \%.
+This percentage difference signals that the max depth hyperparameter is significantly more sensible to overfitting than the number of trees parameter.
+
+
+
 
 \subsection{Gradient Tree Boosting}
 
