--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -554,34 +554,46 @@ These results are recorded and averaged across all trees and all the split scena
  \todo{Add experiment results for Random Forest runs and show feature importances for 1 problem.}
 
 In this subsection, we explore on the task described on \cref{target4} by fitting random forest learners.
-Here, our cross validation procedure will explore multiple combinations of hyperparameter values, by grid searching over a cartesian product of finite sets.
-The procedure is onerous in practice since we generally have to search over more than 5 parameters.
-If each of this has at least 10 possible values, then the search of the best hyperparameters spans a space of more than ten thousand points.
-Moreover, each of these configurations needs to be cross validated in a number of folds.
-This then expands the amount of times we fit a random forest model, creating a large amount of iterations during this search.
-And if we were to use commodity hardware with standard tools for this, it would take weeks or be probably impossible to do with the number of samples we are using in our dataset.
+Here, our cross validation procedure explored multiple combinations of hyperparameters that we predefined.
 
-For the reasones exposed, before, we take on the task of using a specialized server for the experiments.
-Our setup consists of a 16 core CPU with 72GB of available RAM running a UNIX based OS.
-As for the software, we used \cref{python3.5} as the scripting language with a specialized machine learning package \cref{graphlab}.
-We can't stress enough how convenient the ``Graphlab'' is for our purposes.
-It handles most of the complex task of parallelizing the cross validation procedures and the building of the models.
-Also, it has an \texit{out-of-the-box} management of big datasets which might exceed the available amount of memory used by the server by natively pooling and sharing resources among computer processes, without need of any user interaction.
-This has allowed us to conveniently run these long experiments without risk of failure due to lack of memory and without any prior expert domain knowledge on computer systems.
+Denote all possible combinations by $\Alpha_1 \times \Alpha_2 \ldots \times  \Alpha_j$, where each hyperparameter $\alpha_i$ will take all possible predefined values in $\Alpha_i \forall i \in {1,\ldots,j}$.
+In practice, we must be careful with this procedure for the Random Forest algorithm since it is costly.
+The learner has $j\geq 10$ and for each $\Alpha_i$ it is normal to have more than 10 possible values.
+Thus the search spans a space of more than ten thousand combinations.
+Moreover, each combintation has to be cross validated on the number of folds we define, creating a very large amount of iterations during this search.
+These fits will take computer resources such as memory and CPU time.
+So we have to limit ourselves to search over a limited amount of values.
 
-For this experiment, we would like to only consider migrant people that are non-endemic at $T_1$, but have been during $T_0$.
-We used different setups for this, but in all we cross validated the same possible hyperparameter configurations.
-The grid of hyperparameters used spanned the following items:
+Also, if we were to use commodity hardware with standard tools for this procedure, the experiment could take weeks and, given our dataset size, it would not fit into computer memory.
+For these reasons, we take on the task with a specialized server with a 16 core CPU and 72 gigabytes of available RAM .
+The system runs a UNIX based OS and our algorithms were scripted in \cref{python3.5}.
+We used the specialized machine learning package \cref{graphlab} to handle the parallelization and the distribution of system resources.
+As a side note, we can't stress enough how convenient this package is for our purposes.
+It handles most of the complex task of maxing out the system resources to perform as fast as possible in the cross validation procedure and in the construction of the main $X$ dataset.
+Also, it has an \texit{out-of-the-box} memory management for large datasets.
+Wit this, we can natively handle data that is larger than the amount of memory in the server used by the server, requiring minimal user knowledge to tune.
+\cref{graphlab} has allowed us to conveniently run these long experiments without risk of failure due to lack of memory and without any prior expert domain knowledge on computer systems.
+
+For this experiment, we only considered migrant people that are non-endemic at $T_1$, but have been during $T_0.
+In the general procedure, we cross validated the same possible hyperparameter configurations, where these spanned the following items:
 
 \begin{itemize}\label{list:random_forest_grid_search_params}
 
-  \item The tree's max depth
+  \item The tree's maximum depth
   \item If we pre-weighted the positive and negative classes in the loss function
   \item The maximum number of trees to grow
-  \item
+  \item The splitting criterion at each node
+  \item The number of features available to use at each split
+  \item The minimum number of splits
+  \item The scoring function used to evaluate the learner
+  \item The minimum loss reduction needed to allow a split
 
 \end{itemize}
 
+
+The experiment ran two different procedures, where each varied in the attributes used for our $X$ dataset. In the first one the procedure ran with all available features and in the second one we separated the features that were highly correlated ($> 0.2$) with the target variable.
+
+\todo{add experiment results}
 
 
 \section{Boosting Models}\label{section:gradient_boosting}
