Proposed modification to the title

--- a/preamble.tex
+++ b/preamble.tex
@@ -318,8 +318,13 @@ pdfkeywords={machine learning}
       \vspace{0.3\textheight}
       \rule{\textwidth}{1.5pt}\par
       \vspace{\baselineskip}
- {\bfseries\Huge{Exploring Latinoamerican chagasic migrations with machine learning }\par
- 	\bigskip\Large{Explorando migraciones chagásicas en latinoamérica con aprendizaje automático}}\\
+
+% {\bfseries\Huge{Exploring Latinoamerican chagasic migrations with machine learning }\par
+ {\bfseries\Huge{Exploring Migrations and Spread of Chagas Disease in Latin America with Machine Learning}\par
+
+% 	\bigskip\Large{Explorando migraciones chagásicas en latinoamérica con aprendizaje automático}}\\
+ 	\bigskip\Large{Explorando migraciones y difusión del mal de Chagas en América Latina con aprendizaje automático}}\\
+
       \vspace{\baselineskip}
       \rule{\textwidth}{1.5pt}\par
       \vfill
